--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-pathfinder": "^1.1.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
